fix(form): avatar cropping

--- a/_sass/_admin.scss
+++ b/_sass/_admin.scss
@@ -526,7 +526,7 @@ input {
 
 .entity_form__root_img_template {
   .webix_template {
-    padding: 3px 2px !important;
+    padding: 3px 0 !important;
   }
 }
 
